Example of bootstrap colum issue.  File index-col8.html just uses col8 in rows (I believe properly, but has a white gap on the right.  File index-col-in-container.html does some crazy stuff by adding a col-md-8 thing to overal container and tehn uses col-md-12 for the overall text and image.  It mostly works, but is centered.  I'm confused on how to make it work properly.

--- a/css/local-style.css
+++ b/css/local-style.css
@@ -1,7 +1,11 @@
 /* Set background image */
 body {
     background-color: transparent;
-    background-image: url("images/paper.gif");
+    background-image: url("../images/tiles-shapes-2617112_1280.webp");
+}
+
+main {
+    background-color: white;
 }
 
 /* Override font-family for <h1> and .navbar-brand */
@@ -14,14 +18,16 @@ h1 {
     font-weight: bold;
 }
 
+.spacer {
+    height: 30px; 
+}
+
 .gregfooter-small {
     height: 10px; 
     background-color: #aaaaaa;
 }
 
 .gregfooter-large {
-    background-image: url("images/tiles-shapes-2617112_1280.wedp");
-    background-repeat: repeat;
     height: 50px; 
     background-color: #666666;
 }
